# Coco_model_triple_riding_detection

./: README.md  database.py  detect_triple_riding.py  detect_video_triple_riding.py  pyproject.toml  requirements.txt  setup.py
datasets/triple_riding/: README.md
docs/: triple_riding.md
outputs/triple_riding/: report.csv
scripts/: run_all.sh
